# detour

./: .gitignore  Cargo.toml  README.md  prd.json  progress.txt
.github/workflows/: ci.yml  release.yml
crates/agent/: Cargo.toml
crates/agent/src/: forwarder.rs  lib.rs  outbound.rs  status.rs  tunnel.rs
crates/broker/: Cargo.toml
crates/broker/src/: auth.rs  connections.rs  e2e_tests.rs  main.rs  registry.rs  relay.rs
crates/cli/: Cargo.toml
crates/cli/src/: auth.rs  main.rs
crates/cli/src/commands/: env.rs  mod.rs  run.rs  start.rs  status.rs  tun.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  error.rs  lib.rs  session.rs
crates/layer/: Cargo.toml
crates/layer/src/: imp.rs  lib.rs
crates/proto/: Cargo.toml  build.rs
crates/proto/proto/: detour.proto
crates/proto/src/: lib.rs
crates/sidecar/: Cargo.toml
crates/sidecar/src/: cache.rs  config.rs  inspector.rs  main.rs  proxy.rs  raw.rs
deploy/terraform/aws/: broker.tf  sidecar.tf
deploy/terraform/gcp/: broker.tf  sidecar.tf
docker/: broker.Dockerfile  sidecar.Dockerfile
