[workspace]
members = [
    "crates/proto",
    "crates/core",
    "crates/agent",
    "crates/sidecar",
    "crates/broker",
    "crates/cli",
]
resolver = "2"

[workspace.dependencies]
tokio       = { version = "1", features = ["full"] }
tonic       = { version = "0.14", features = ["tls-ring", "tls-webpki-roots"] }
prost       = { version = "0.14" }
hyper       = { version = "1", features = ["full"] }
hyper-util  = { version = "0.1", features = ["full"] }
tower       = { version = "0.5", features = ["full"] }
axum        = { version = "0.7" }
redis       = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
uuid        = { version = "1", features = ["v4", "serde"] }
jsonwebtoken = "9"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
clap        = { version = "4", features = ["derive", "env"] }
config      = "0.14"
rustls      = "0.23"
async-trait = "0.1"
anyhow      = "1"
thiserror   = "1"
http        = "1"
bytes       = "1"
futures     = "0.3"
tokio-stream     = { version = "0.1", features = ["net"] }
http-body-util   = "0.1"
